--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -2,10 +2,16 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "typeorm": ["node_modules/typeorm/typeorm-model-shim.js"],
+    }
   },
   "exclude": [
     "test.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "backend/*.ts",
+    "backend/controllers/*.ts",
+    "backend/migration/*.ts"
   ]
 }
