--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "dotenv": "^6.2.0",
@@ -27,6 +28,7 @@
     "express-unless": "^0.5.0",
     "gulp": "^4.0.0",
     "gulp-nodemon": "^2.4.2",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "primeicons": "^1.0.0",
