--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
+    "@ng-select/ng-select": "^2.15.3",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "dotenv": "^6.2.0",
@@ -35,6 +36,7 @@
     "primeng": "^7.0.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.3.3",
+    "save": "^2.3.3",
     "tslib": "^1.9.0",
     "typeorm": "^0.2.12",
     "zone.js": "~0.8.26"
