--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,10 @@
               "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/graphlib/dist/graphlib.js",
+              "node_modules/dagre/dist/dagre.js"
+            ]
           },
           "configurations": {
             "production": {
