--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "@ng-select/ng-select": "^2.15.3",
+    "@types/dagre-d3": "^0.4.38",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "d3": "^5.9.0",
+    "dagre-d3": "^0.6.3",
     "dotenv": "^6.2.0",
     "express-jwt": "^5.3.1",
     "express-unless": "^0.5.0",
@@ -46,9 +49,10 @@
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@types/d3": "^5.7.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
