--- a/angular.json
+++ b/angular.json
@@ -88,9 +88,17 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/graphlib/dist/graphlib.js",
+              "node_modules/dagre/dist/dagre.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
