--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -5,7 +5,10 @@
     "types": [
       "jasmine",
       "node"
-    ]
+    ],
+    "paths": {
+      "typeorm": ["node_modules/typeorm/typeorm-model-shim.js"],
+    }
   },
   "files": [
     "test.ts",
@@ -14,5 +17,10 @@
   "include": [
     "**/*.spec.ts",
     "**/*.d.ts"
+  ],
+  "exclude": [
+    "backend/*.ts",
+    "backend/controllers/*.ts",
+    "backend/migration/*.ts"
   ]
 }
