--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "^7.2.7",
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "@ng-select/ng-select": "^2.15.3",
     "@types/dagre-d3": "^0.4.38",
