Refactor: use app module as a top-level routing module
Content of app module is moved to administration module, so:

- App component now shows content of the certain route
- Administration component now shows the admin panel
- Login component shows the login page (it is not done yet)

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,7 +4,7 @@
     "outDir": "../out-tsc/app",
     "types": [],
     "paths": {
-      "typeorm": ["node_modules/typeorm/typeorm-model-shim.js"],
+      "typeorm": ["node_modules/typeorm/typeorm-model-shim.js"]
     }
   },
   "exclude": [
