--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "@ng-select/ng-select": "^2.15.3",
     "@types/dagre-d3": "^0.4.38",
+    "bcrypt": "^3.0.4",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "d3": "^5.9.0",
