--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-unless": "^0.5.0",
     "gulp": "^4.0.0",
     "gulp-nodemon": "^2.4.2",
+    "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
