--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,10 +5,10 @@
     "username": "root",
     "password": "root",
     "database": "nodedb",
-    "entities": ["dist-server/entities/*.js"],
+    "entities": ["dist-server/backend/entities/*.js"],
     "logging": true,
     "migrationsTableName": "custom_migration_table",
-    "migrations": ["dist-server/migration/*.js"],
+    "migrations": ["dist-server/backend/migration/*.js"],
     "timezone": "Z",
     "cli": {
         "entitiesDir": "src/backend/entities",
