--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.3.3",
     "save": "^2.3.3",
+    "socket.io": "^2.2.0",
     "tslib": "^1.9.0",
     "typeorm": "^0.2.12",
     "zone.js": "~0.8.26"
