--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/dagre-d3": "^0.4.38",
     "bcrypt": "^3.0.4",
     "bootstrap": "^4.2.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "d3": "^5.9.0",
     "dagre-d3": "^0.6.3",
