--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^6.2.0",
     "express-jwt": "^5.3.1",
     "express-unless": "^0.5.0",
+    "file-saver": "^2.0.1",
     "gulp": "^4.0.0",
     "gulp-nodemon": "^2.4.2",
     "jsonwebtoken": "^8.5.0",
