--- a/angular.json
+++ b/angular.json
@@ -29,12 +29,14 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/@ng-select/ng-select/themes/default.theme.css",
+              "node_modules/fullcalendar/dist/fullcalendar.min.css",
               "src/styles.css"
             ],
             "scripts": [
               "node_modules/graphlib/dist/graphlib.js",
               "node_modules/dagre/dist/dagre.js",
-              "node_modules/chart.js/dist/Chart.js"
+              "node_modules/chart.js/dist/Chart.js",
+              "node_modules/fullcalendar/dist/fullcalendar.js"
             ]
           },
           "configurations": {
