--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-jwt": "^5.3.1",
     "express-unless": "^0.5.0",
     "file-saver": "^2.0.1",
+    "fullcalendar": "^4.0.0-alpha.2",
     "gulp": "^4.0.0",
     "gulp-nodemon": "^2.4.2",
     "jsonwebtoken": "^8.5.0",
