Set up to test crud-table-lib with the whole project

--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -16,7 +16,8 @@
   ],
   "include": [
     "**/*.spec.ts",
-    "**/*.d.ts"
+    "**/*.d.ts",
+    "../projects/crud-table-lib/src/**/*.spec.ts"
   ],
   "exclude": [
     "backend/*.ts",
