--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "fullcalendar": "^4.0.0-alpha.2",
     "gulp": "^4.0.0",
     "gulp-nodemon": "^2.4.2",
+    "jimp": "^0.6.1",
     "jsonwebtoken": "^8.5.0",
+    "mime-types": "^2.1.24",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
