--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "^7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -46,7 +47,7 @@
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "primeicons": "^1.0.0",
-    "primeng": "^7.0.5",
+    "primeng": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.3.3",
     "save": "^2.3.3",
