--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "^7.2.7",
-    "@fullcalendar/core": "^4.1.0",
+    "@fullcalendar/core": "^4.2.0",
+    "@fullcalendar/daygrid": "^4.2.0",
     "@fullcalendar/list": "^4.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "@ng-select/ng-select": "^2.15.3",
