--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "^7.2.7",
     "@fullcalendar/core": "^4.2.0",
     "@fullcalendar/daygrid": "^4.2.0",
+    "@fullcalendar/interaction": "^4.2.0",
     "@fullcalendar/list": "^4.1.0",
+    "@fullcalendar/timegrid": "^4.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "@ng-select/ng-select": "^2.15.3",
     "@types/dagre-d3": "^0.4.38",
