--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
-    "test": "ng test",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng serve --proxy-config proxy.conf.json",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng build",
+    "test": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
+    "e2e": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng e2e",
     "gulp": "gulp",
     "migration": "npm run gulp clean-backend compile-backend && typeorm migration:run",
     "generate-migration": "npm run gulp clean-backend compile-backend && typeorm migration:generate",
@@ -15,28 +15,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.13.0",
-    "@angular/animations": "~7.2.0",
-    "@angular/cdk": "^7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "^7.2.7",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/animations": "~9.1.13",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "~9.1.13",
+    "@angular/compiler": "~9.1.13",
+    "@angular/core": "~9.1.13",
+    "@angular/forms": "~9.1.13",
+    "@angular/localize": "~9.1.13",
+    "@angular/platform-browser": "~9.1.13",
+    "@angular/platform-browser-dynamic": "~9.1.13",
+    "@angular/router": "~9.1.13",
     "@fullcalendar/core": "^4.2.0",
     "@fullcalendar/daygrid": "^4.2.0",
     "@fullcalendar/interaction": "^4.2.0",
     "@fullcalendar/list": "^4.1.0",
     "@fullcalendar/timegrid": "^4.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.2",
-    "@ng-select/ng-select": "^2.15.3",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "@ng-select/ng-select": "^4.0.0",
     "@types/dagre-d3": "^0.4.38",
     "bcrypt": "^5.1.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
-    "core-js": "^2.5.4",
+    "core-js": "^3.6.5",
     "d3": "^5.9.0",
     "dagre-d3": "^0.6.3",
     "dotenv": "^6.2.0",
@@ -51,26 +52,26 @@
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
-    "ngx-crud-forms": "^1.0.0",
-    "primeicons": "^1.0.0",
-    "primeng": "^8.0.0",
-    "rxjs": "~6.3.3",
+    "ngx-crud-forms": "^3.1.0",
+    "primeicons": "^4.0.0",
+    "primeng": "^9.1.3",
+    "rxjs": "~6.5.5",
     "save": "^2.3.3",
     "socket.io": "^2.2.0",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "typeorm": "^0.2.22",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-ng-packagr": "~0.12.0",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler-cli": "^7.2.13",
-    "@angular/language-service": "~7.2.0",
+    "@angular/cli": "~9.1.15",
+    "@angular/compiler-cli": "~9.1.13",
+    "@angular/language-service": "~9.1.13",
     "@types/d3": "^5.7.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
+    "@types/node": "~12.11.1",
+    "codelyzer": "^5.2.2",
+    "cross-env": "^10.0.0",
     "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -80,13 +81,11 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lint-staged": "^8.1.5",
-    "ng-packagr": "^5.1.0",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tsickle": ">=0.34.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "ts-node": "~8.6.2",
+    "tslib": "^1.10.0",
+    "tslint": "~5.20.1",
+    "typescript": "~3.8.3"
   },
   "lint-staged": {
     "linters": {
