--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
             "server": "127.0.0.1",
             "username": "root"
         }
-    ]
+    ],
+    "angular.enable-strict-mode-prompt": false
 }
