--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng serve --proxy-config proxy.conf.json",
-    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng build",
-    "test": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng test",
+    "start": "ng serve --proxy-config proxy.conf.json",
+    "build": "ng build",
+    "test": "ng test",
     "lint": "ng lint",
-    "e2e": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng e2e",
+    "e2e": "ng e2e",
     "gulp": "gulp",
     "migration": "npm run gulp clean-backend compile-backend && typeorm migration:run",
     "generate-migration": "npm run gulp clean-backend compile-backend && typeorm migration:generate",
@@ -15,28 +15,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular/animations": "~9.1.13",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.1.13",
-    "@angular/compiler": "~9.1.13",
-    "@angular/core": "~9.1.13",
-    "@angular/forms": "~9.1.13",
-    "@angular/localize": "~9.1.13",
-    "@angular/platform-browser": "~9.1.13",
-    "@angular/platform-browser-dynamic": "~9.1.13",
-    "@angular/router": "~9.1.13",
+    "@angular/animations": "~12.2.17",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "~12.2.17",
+    "@angular/compiler": "~12.2.17",
+    "@angular/core": "~12.2.17",
+    "@angular/forms": "~12.2.17",
+    "@angular/localize": "~12.2.17",
+    "@angular/platform-browser": "~12.2.17",
+    "@angular/platform-browser-dynamic": "~12.2.17",
+    "@angular/router": "~12.2.17",
     "@fullcalendar/core": "^4.2.0",
     "@fullcalendar/daygrid": "^4.2.0",
     "@fullcalendar/interaction": "^4.2.0",
     "@fullcalendar/list": "^4.1.0",
     "@fullcalendar/timegrid": "^4.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
-    "@ng-select/ng-select": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-select/ng-select": "^7.4.0",
     "@types/dagre-d3": "^0.4.38",
     "bcrypt": "^5.1.0",
     "bootstrap": "^4.3.1",
-    "chart.js": "^2.8.0",
+    "chart.js": "^3.9.1",
     "core-js": "^3.6.5",
     "d3": "^5.9.0",
     "dagre-d3": "^0.6.3",
@@ -52,40 +51,42 @@
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
-    "ngx-crud-forms": "^3.1.0",
-    "primeicons": "^4.0.0",
-    "primeng": "^9.1.3",
-    "rxjs": "~6.5.5",
+    "ngx-crud-forms": "^4.2.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^12.2.3",
+    "rxjs": "~6.6.7",
     "save": "^2.3.3",
     "socket.io": "^2.2.0",
-    "tslib": "^1.10.0",
+    "tslib": "^2.3.0",
     "typeorm": "^0.2.22",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular/cli": "~9.1.15",
-    "@angular/compiler-cli": "~9.1.13",
-    "@angular/language-service": "~9.1.13",
+    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular/cli": "~12.2.18",
+    "@angular/compiler-cli": "~12.2.17",
+    "@angular/language-service": "~12.2.17",
     "@types/d3": "^5.7.0",
-    "@types/jasmine": "~2.8.8",
+    "@types/estree": "^1.0.1",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~12.11.1",
-    "codelyzer": "^5.2.2",
-    "cross-env": "^10.0.0",
+    "@types/minimatch": "^3.0.5",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.2",
     "husky": "^1.3.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.4",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "lint-staged": "^8.1.5",
-    "protractor": "~5.4.0",
-    "ts-node": "~8.6.2",
-    "tslib": "^1.10.0",
-    "tslint": "~5.20.1",
-    "typescript": "~3.8.3"
+    "protractor": "~7.0.0",
+    "ts-node": "~10.2.1",
+    "tslib": "^2.3.0",
+    "tslint": "~6.1.3",
+    "typescript": "~4.2.4"
   },
   "lint-staged": {
     "linters": {
