--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,6 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/dynamic-forms",
-            "showCircularDependencies": false,
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -29,14 +28,12 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/@ng-select/ng-select/themes/default.theme.css",
-              "node_modules/fullcalendar/dist/fullcalendar.min.css",
               "src/styles.css"
             ],
             "scripts": [
               "node_modules/graphlib/dist/graphlib.js",
               "node_modules/dagre/dist/dagre.js",
-              "node_modules/chart.js/dist/chart.js",
-              "node_modules/fullcalendar/dist/fullcalendar.js"
+              "node_modules/chart.js/dist/chart.js"
             ],
             "aot": false,
             "vendorChunk": true,
@@ -137,5 +134,8 @@
       }
     }
   },
-  "defaultProject": "dynamic-forms"
+  "defaultProject": "dynamic-forms",
+  "cli": {
+    "analytics": "22edc193-e2be-41c2-8d24-5296beb8c9af"
+  }
 }
