--- a/package.json
+++ b/package.json
@@ -15,23 +15,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.4.0",
-    "@angular/cdk": "~13.3.9",
-    "@angular/common": "~13.4.0",
-    "@angular/compiler": "~13.4.0",
-    "@angular/core": "~13.4.0",
-    "@angular/forms": "~13.4.0",
-    "@angular/localize": "~13.4.0",
-    "@angular/platform-browser": "~13.4.0",
-    "@angular/platform-browser-dynamic": "~13.4.0",
-    "@angular/router": "~13.4.0",
-    "@fullcalendar/core": "^4.2.0",
-    "@fullcalendar/daygrid": "^4.2.0",
-    "@fullcalendar/interaction": "^4.2.0",
-    "@fullcalendar/list": "^4.1.0",
-    "@fullcalendar/timegrid": "^4.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@ng-select/ng-select": "^7.4.0",
+    "@angular/animations": "^14.3.0",
+    "@angular/cdk": "^14.2.7",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/localize": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
+    "@fullcalendar/angular": "^6.1.8",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/list": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
+    "@ng-select/ng-select": "^10.0.3",
+    "@popperjs/core": "^2.11.8",
     "@types/dagre-d3": "^0.4.38",
     "bcrypt": "^5.1.0",
     "bootstrap": "^4.3.1",
@@ -42,7 +44,6 @@
     "dotenv": "^6.2.0",
     "express-jwt": "^5.3.1",
     "express-unless": "^0.5.0",
-    "fullcalendar": "^4.0.0-alpha.2",
     "gulp": "^4.0.0",
     "gulp-nodemon": "^2.4.2",
     "jimp": "^0.6.1",
@@ -52,8 +53,8 @@
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "ngx-crud-forms": "^4.2.0",
-    "primeicons": "^5.0.0",
-    "primeng": "^12.2.3",
+    "primeicons": "^6.0.1",
+    "primeng": "^14.2.3",
     "rxjs": "~6.6.7",
     "save": "^2.3.3",
     "socket.io": "^2.2.0",
@@ -62,10 +63,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.11",
-    "@angular/cli": "~13.3.11",
-    "@angular/compiler-cli": "~13.4.0",
-    "@angular/language-service": "~13.4.0",
+    "@angular-devkit/build-angular": "^14.2.13",
+    "@angular/cli": "^14.2.13",
+    "@angular/compiler-cli": "^14.3.0",
+    "@angular/language-service": "^14.3.0",
     "@types/d3": "^5.7.0",
     "@types/estree": "^1.0.1",
     "@types/jasmine": "~3.6.0",
@@ -86,7 +87,7 @@
     "ts-node": "~10.2.1",
     "tslib": "^2.3.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.6.4"
+    "typescript": "~4.7.4"
   },
   "lint-staged": {
     "linters": {
